<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="4"
    android:shrinkColumns="*"
    android:background="#aab0ce">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_marginBottom="0.5dp"
            android:layout_marginEnd="0.5dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:background="#ededef"
            android:text="@string/btn7"
            android:textSize="20dp"
            android:textColor="#2d356b" />


        <Button
            android:textSize="20dp"
            android:id="@+id/btn8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_marginBottom="0.5dp"
            android:layout_marginEnd="0.5dp"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginStart="0.5dp"
            android:layout_marginTop="1dp"
            android:background="#ededef"
            android:text="@string/btn8"
            android:textColor="#2d356b" />

        <Button
            android:id="@+id/btn9"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="2"
            android:layout_marginBottom="0.5dp"
            android:layout_marginEnd="0.5dp"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginStart="0.5dp"
            android:layout_marginTop="1dp"
            android:background="#ededef"
            android:text="@string/btn9"
            android:textColor="#2d356b" />

        <Button
            android:id="@+id/btnDEL"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="3"
            android:layout_marginBottom="0.5dp"
            android:layout_marginEnd="0.5dp"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginStart="0.5dp"
            android:layout_marginTop="1dp"
            android:background="#ced3e0"
            android:text="@string/btnDEL"
            android:textColor="#2d356b" />

        <Button
            android:id="@+id/btnAC"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="4"
            android:layout_marginBottom="0.5dp"
            android:layout_marginEnd="1dp"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="1dp"
            android:layout_marginStart="0.5dp"
            android:layout_marginTop="1dp"
            android:background="#ced3e0"
            android:text="@string/btnAC"
            android:textColor="#2d356b" />

    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <Button
            android:layout_width="match_parent"
            android:layout_marginTop="0.5dp"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginEnd="0.5dp"
            android:layout_marginBottom="0.5dp"
            android:layout_height="match_parent"
            android:id="@+id/btn4"
            android:text="@string/btn4"
            android:textSize="20dp"
            android:textColor="#2d356b"
            android:background="#ededef"
            android:layout_column="0"/>
        <Button
            android:layout_width="match_parent"
            android:layout_marginTop="0.5dp"
            android:layout_marginStart="0.5dp"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginEnd="0.5dp"
            android:layout_marginBottom="0.5dp"
            android:layout_height="match_parent"
            android:text="@string/btn5"
            android:id="@+id/btn5"
            android:textColor="#2d356b"
            android:background="#ededef"
            android:layout_column="1"
            android:textSize="20dp" />
        <Button
            android:layout_width="match_parent"
            android:layout_marginTop="0.5dp"
            android:textSize="20dp"
            android:layout_marginStart="0.5dp"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginEnd="0.5dp"
            android:layout_marginBottom="0.5dp"
            android:layout_height="match_parent"
            android:text="@string/btn6"
            android:id="@+id/btn6"
            android:textColor="#2d356b"
            android:background="#ededef"
            android:layout_column="2"/>
        <Button
            android:layout_width="match_parent"
            android:textSize="20dp"
            android:layout_marginTop="0.5dp"
            android:layout_marginStart="0.5dp"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginEnd="0.5dp"
            android:layout_marginBottom="0.5dp"
            android:layout_height="match_parent"
            android:text="@string/btnPor"
            android:textColor="#2d356b"
            android:background="#ced3e0"
            android:id="@+id/btnMult"
            android:layout_column="3"/>
        <Button
            android:layout_width="match_parent"
            android:layout_marginTop="0.5dp"
            android:textSize="30dp"
            android:layout_marginStart="0.5dp"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="0.5dp"
            android:layout_height="match_parent"
            android:text="@string/btnDiv"
            android:textColor="#2d356b"
            android:background="#ced3e0"
            android:id="@+id/btnDiv"
            android:layout_column="4"/>

    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <Button
            android:layout_width="match_parent"
            android:layout_marginTop="0.5dp"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginEnd="0.5dp"
            android:layout_marginBottom="0.5dp"
            android:layout_height="match_parent"
            android:id="@+id/btn1"
            android:textSize="20dp"
            android:text="@string/btn1"
            android:textColor="#2d356b"
            android:background="#ededef"
            android:layout_column="0"/>
        <Button
            android:layout_width="match_parent"
            android:layout_marginTop="0.5dp"
            android:layout_marginStart="0.5dp"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginEnd="0.5dp"
            android:layout_marginBottom="0.5dp"
            android:layout_height="match_parent"
            android:text="@string/btn2"
            android:textSize="20dp"
            android:textColor="#2d356b"
            android:background="#ededef"
            android:id="@+id/btn2"
            android:layout_column="1"/>
        <Button
            android:layout_width="match_parent"
            android:layout_marginTop="0.5dp"
            android:layout_marginStart="0.5dp"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginEnd="0.5dp"
            android:layout_marginBottom="0.5dp"
            android:layout_height="match_parent"
            android:text="@string/btn3"
            android:textSize="20dp"
            android:textColor="#2d356b"
            android:background="#ededef"
            android:id="@+id/btn3"
            android:layout_column="2"/>
        <Button
            android:layout_width="match_parent"
            android:layout_marginTop="0.5dp"
            android:layout_marginStart="0.5dp"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginEnd="0.5dp"
            android:layout_marginBottom="0.5dp"
            android:layout_height="match_parent"
            android:text="@string/btnMas"
            android:textSize="30dp"
            android:textColor="#2d356b"
            android:background="#ced3e0"
            android:id="@+id/btnMas"
            android:layout_column="3"/>
        <Button
            android:layout_width="match_parent"
            android:layout_marginTop="0.5dp"
            android:layout_marginStart="0.5dp"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="0.5dp"
            android:layout_height="match_parent"
            android:text="@string/btnMenos"
            android:textSize="40dp"
            android:textColor="#2d356b"
            android:background="#ced3e0"
            android:id="@+id/btnMenos"
            android:layout_column="4"/>

    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <Button
            android:layout_width="match_parent"
            android:layout_marginTop="0.5dp"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginEnd="0.5dp"
            android:layout_marginBottom="0.5dp"
            android:layout_height="match_parent"
            android:id="@+id/btn0"
            android:text="@string/btn0"
            android:textSize="20dp"
            android:textColor="#2d356b"
            android:background="#ededef"
            android:layout_column="0"/>
        <Button
            android:layout_width="match_parent"
            android:layout_marginTop="0.5dp"
            android:layout_marginStart="0.5dp"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginEnd="0.5dp"
            android:layout_marginBottom="1dp"
            android:layout_height="match_parent"
            android:text="@string/btnDecimalPoint"
            android:textSize="20dp"
            android:textColor="#2d356b"
            android:background="#ededef"
            android:id="@+id/btnPunto"
            android:layout_column="1"/>
        <Button
            android:id="@+id/btnX10E"
            android:layout_width="match_parent"
            android:layout_marginTop="0.5dp"
            android:layout_marginStart="0.5dp"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginEnd="0.5dp"
            android:layout_marginBottom="1dp"
            android:layout_height="match_parent"
            android:text="@string/btnPorDiezPowered"
            android:textSize="20dp"
            android:textAllCaps="false"
            android:textColor="#2d356b"
            android:background="#ededef"
            android:layout_column="2"/>
        <Button
            android:layout_width="match_parent"
            android:layout_marginTop="0.5dp"
            android:layout_marginStart="0.5dp"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginEnd="0.5dp"
            android:layout_marginBottom="1dp"
            android:layout_height="match_parent"
            android:text="@string/btnAns"
            android:textSize="20dp"
            android:textColor="#2d356b"
            android:background="#ced3e0"
            android:id="@+id/btnANS"
            android:layout_column="3"/>
        <Button
            android:layout_width="match_parent"
            android:layout_marginTop="0.5dp"
            android:layout_marginStart="0.5dp"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:layout_height="match_parent"
            android:text="@string/btnIgual"
            android:textSize="40dp"
            android:textColor="#ffffff"
            android:background="#2d356b"
            android:id="@+id/btnIgual"
            android:layout_column="4"/>

    </TableRow>

</TableLayout>