<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3"
    android:background="#aab0ce"
    android:shrinkColumns="*">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnSquare"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_marginBottom="0.5dp"
            android:layout_marginEnd="0.5dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:background="#ededef"
            android:text="@string/btnSquare"
            android:textAllCaps="false"
            android:textColor="#2d356b" />

        <Button
            android:id="@+id/btnCube"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_marginBottom="0.5dp"
            android:layout_marginEnd="0.5dp"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginStart="0.5dp"
            android:layout_marginTop="1dp"
            android:background="#ededef"
            android:text="@string/btnCube"
            android:textAllCaps="false"
            android:textColor="#2d356b" />

        <Button
            android:id="@+id/btnNPower"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="2"
            android:layout_marginBottom="0.5dp"
            android:layout_marginEnd="0.5dp"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginStart="0.5dp"
            android:layout_marginTop="1dp"
            android:background="#ededef"
            android:text="@string/btnNPower"
            android:textAllCaps="false"
            android:textColor="#2d356b" />

        <Button
            android:id="@+id/btnInvPow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="3"
            android:layout_marginBottom="0.5dp"
            android:layout_marginEnd="0.5dp"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginStart="0.5dp"
            android:layout_marginTop="1dp"
            android:background="#ced3e0"
            android:text="@string/btnInvPower"
            android:textAllCaps="false"
            android:textColor="#2d356b" />

        <Button
            android:id="@+id/btnFact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="4"
            android:layout_marginBottom="0.5dp"
            android:layout_marginEnd="1dp"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="1dp"
            android:layout_marginStart="0.5dp"
            android:layout_marginTop="1dp"
            android:background="#ced3e0"
            android:text="@string/btnFact"
            android:textAllCaps="false"
            android:textColor="#2d356b" />

    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSqrt"
            android:text="@string/btnSqrt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0.5dp"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginEnd="0.5dp"
            android:layout_marginBottom="0.5dp"
            android:background="#ededef"
            android:textColor="#2d356b"
            android:layout_column="0"/>
        <Button
            android:id="@+id/btnCrt"
            android:text="@string/btnCrt"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0.5dp"
            android:layout_marginStart="0.5dp"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginEnd="0.5dp"
            android:layout_marginBottom="0.5dp"
            android:background="#ededef"
            android:textColor="#2d356b"
            android:layout_column="1"/>
        <Button
            android:id="@+id/btnNRoot"
            android:text="@string/btnNRoot"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0.5dp"
            android:layout_marginStart="0.5dp"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginEnd="0.5dp"
            android:layout_marginBottom="0.5dp"
            android:background="#ededef"
            android:textColor="#2d356b"
            android:layout_column="2"/>
        <Button
            android:id="@+id/btnOpenPar"
            android:text="@string/btnOpenPar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0.5dp"
            android:layout_marginStart="0.5dp"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginEnd="0.5dp"
            android:layout_marginBottom="0.5dp"
            android:background="#ced3e0"
            android:textColor="#2d356b"
            android:layout_column="3"/>
        <Button
            android:id="@+id/btnClosePar"
            android:text="@string/btnClosePar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0.5dp"
            android:layout_marginStart="0.5dp"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="0.5dp"
            android:background="#ced3e0"
            android:textColor="#2d356b"
            android:layout_column="4"/>

    </TableRow>


    <TableRow
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnPi"
            android:text="@string/btnPi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0.5dp"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginEnd="0.5dp"
            android:layout_marginBottom="1dp"
            android:background="#ededef"
            android:textColor="#2d356b"
            android:layout_column="0"/>
        <Button
            android:id="@+id/btnExp"
            android:text="@string/btnExp"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0.5dp"
            android:layout_marginStart="0.5dp"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginEnd="0.5dp"
            android:layout_marginBottom="1dp"
            android:background="#ededef"
            android:textColor="#2d356b"
            android:layout_column="1"/>
        <Button
            android:id="@+id/btnX10"
            android:text="@string/btn10Power"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0.5dp"
            android:layout_marginStart="0.5dp"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginEnd="0.5dp"
            android:layout_marginBottom="1dp"
            android:background="#ededef"
            android:textColor="#2d356b"
            android:layout_column="2"/>
        <Button
            android:id="@+id/btnComma"
            android:text="@string/btnComma"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0.5dp"
            android:layout_marginStart="0.5dp"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginEnd="0.5dp"
            android:layout_marginBottom="1dp"
            android:background="#ced3e0"
            android:textColor="#2d356b"
            android:textSize="20dp"
            android:layout_column="3"/>
        <Button
            android:text="@string/btnForward"
            android:id="@+id/btnForward"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0.5dp"
            android:layout_marginStart="0.5dp"
            android:layout_marginLeft="0.5dp"
            android:layout_marginRight="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:background="#ced3e0"
            android:textAllCaps="false"
            android:textColor="#2d356b"
            android:layout_column="4"/>

    </TableRow>


</TableLayout>